# doremi

./: .clang-format  .doxygen  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  prepareCodeEnvironment.sh  setCodeHome.bat
Doremi/Client/: CMakeLists.txt
Doremi/Client/Include/: Game.hpp  Version.hpp
Doremi/Client/Source/: Game.cpp  Main.cpp  Resource.aps  Resource.rc
DoremiEngine/Audio/: CMakeLists.txt
DoremiEngine/Audio/Include/: AudioModule.hpp
DoremiEngine/Audio/Include/Internal/: AudioModuleImplementation.hpp
DoremiEngine/Audio/Source/Internal/: AudioModuleImplementation.cpp
DoremiEngine/Graphic/: BasicPixelShader.hlsl  BasicVertexShader.hlsl  CMakeLists.txt
DoremiEngine/Graphic/Include/: DisplayModes.hpp  GraphicMain.hpp  GraphicModule.hpp  GraphicModuleContext.hpp  GraphicModuleImplementation.hpp  GraphicObject.hpp  HelpFunctions.hpp  MeshInfo.hpp  MeshLoader.hpp  ModelLoader.hpp  ParticleSystem.hpp  ShaderTypeEnum.hpp  VertexStruct.hpp
DoremiEngine/Graphic/Include/Camera/: CameraSystem.hpp
DoremiEngine/Graphic/Include/Factory/: GraphicModuleFactory.hpp
DoremiEngine/Graphic/Include/Interface/Animation/: SkeletalAnimation.hpp  SkeletalInformation.hpp
DoremiEngine/Graphic/Include/Interface/Camera/: Camera.hpp
DoremiEngine/Graphic/Include/Interface/Light/: LightInfo.hpp
DoremiEngine/Graphic/Include/Interface/Manager/: CameraManager.hpp  ComputeShaderManager.hpp  DirectXManager.hpp  LightManager.hpp  MeshManager.hpp  ParticleSystemManager.hpp  ShaderManager.hpp  SkeletalAnimationManager.hpp  SubModuleManager.hpp  Texture2DManager.hpp
DoremiEngine/Graphic/Include/Interface/Mesh/: MaterialInfo.hpp  MeshInfo.hpp
DoremiEngine/Graphic/Include/Interface/Shader/: ComputeShader.hpp  GeometryShader.hpp  PixelShader.hpp  VertexShader.hpp
DoremiEngine/Graphic/Include/Interface/State/: DepthStencilState.hpp  RasterizerState.hpp
DoremiEngine/Graphic/Include/Interface/Texture/: SpriteInfo.hpp
DoremiEngine/Graphic/Include/Internal/Animation/: SkeletalAnimationImpl.hpp  SkeletalInformation.hpp  SkeletalInformationImpl.hpp
DoremiEngine/Graphic/Include/Internal/Camera/: CameraImpl.hpp
DoremiEngine/Graphic/Include/Internal/Light/: LightInfoImpl.hpp
DoremiEngine/Graphic/Include/Internal/Manager/: CameraManagerImpl.hpp  ComputeShaderManagerImpl.hpp  DirectXManagerImpl.hpp  LightManagerImpl.hpp  MeshManagerImpl.hpp  ParticleSystemManagerImpl.hpp  ShaderManagerImpl.hpp  SkeletalAnimationManagerImpl.hpp  SubModuleManagerImpl.hpp  Texture2DManagerImpl.hpp
DoremiEngine/Graphic/Include/Internal/Mesh/: MaterialInfoImpl.hpp  MeshInfoImpl.hpp  (+2 more)
DoremiEngine/Graphic/Include/Loaders/: DDSTextureLoader.h  ModelLoader.hpp
DoremiEngine/Graphic/Include/Shader/: PixelShader.hpp  Shader.hpp  VertexShader.hpp
DoremiEngine/Graphic/ShaderFiles/ShaderFiles/: BasicPixelShader.hlsl  BasicVertexShader.hlsl  BlurHoriComputeShader.hlsl  BlurVertComputeShader.hlsl  CommonInclude.hlsl  FrustumComputeShader.hlsl  LightCullingComputeShader.hlsl  PostEffectsComputeShader.hlsl  PostPixelShader.hlsl  SkeletalAnimationVertexShader.hlsl  SkyBoxPixelShader.hlsl  SkyBoxVertexShader.hlsl  TextGeometryShader.hlsl  TextPixelShader.hlsl  TextVertexShader.hlsl
DoremiEngine/Graphic/Source/: DDSTextureLoader.cpp  GraphicMain.cpp  GraphicModuleImplementation.cpp  GraphicObject.cpp  MeshLoader.cpp  ModelLoader.cpp  ParticleSystem.cpp
DoremiEngine/Graphic/Source/Animation/: SkeletalAnimationImpl.cpp  SkeletalInformation.cpp  SkeletalInformationImpl.cpp
DoremiEngine/Graphic/Source/Camera/: CameraImpl.cpp  CameraSystem.cpp
DoremiEngine/Graphic/Source/Light/: LightInfoImpl.cpp
DoremiEngine/Graphic/Source/Loaders/: DDSTextureLoader.cpp  ModelLoader.cpp
DoremiEngine/Graphic/Source/Manager/: CameraManagerImpl.cpp  ComputeShaderManagerImpl.cpp  DirectXManagerImpl.cpp  LightManagerImpl.cpp  MeshManagerImpl.cpp  ParticleSystemManagerImpl.cpp  ShaderManagerImpl.cpp  SkeletalAnimationManagerImpl.cpp  SubModuleManagerImpl.cpp  Texture2DManagerImpl.cpp
DoremiEngine/Graphic/Source/Mesh/: MaterialInfoImpl.cpp  MeshInfoImpl.cpp
DoremiEngine/Graphic/Source/Shader/: ComputeShaderImpl.cpp  GeometryShaderImpl.cpp  PixelShader.cpp  PixelShaderImpl.cpp  Shader.cpp  VertexShader.cpp  VertexShaderImpl.cpp
DoremiEngine/Graphic/Source/State/: DepthStencilStateImpl.cpp  RasterizerStateImpl.cpp
DoremiEngine/Graphic/Source/Texture/: SpriteInfoImpl.cpp
DoremiEngine/Physics/: CMakeLists.txt
DoremiEngine/Physics/Include/: CharacterControlManager.hpp  FluidManager.hpp  PhysicsMaterialManager.hpp  PhysicsModule.hpp  PhysicsModuleImplementation.hpp  PhysxSubmodule.hpp  RayCastManager.hpp  RigidBodyManager.hpp  TriggerManager.hpp
DoremiEngine/Physics/Include/Internal/: CharacterControlManagerImpl.hpp  FluidManagerImpl.hpp  PhysicsMaterialManagerImpl.hpp  PhysicsModuleImplementation.hpp  RayCastManagerImpl.hpp  RigidBodyManagerImpl.hpp  TriggerManagerimpl.hpp
DoremiEngine/Physics/Source/: CharacterControlManagerImpl.cpp  FluidManagerImpl.cpp  PhysicsMaterialManagerImpl.cpp  PhysicsModuleImplementation.cpp  PhysxSubmodule.cpp  RayCastManagerImpl.cpp  RigidBodyManagerImpl.cpp  TriggerManagerimpl.cpp
DoremiEngine/Physics/Source/ParticleClasses/: ParticleEmitter.cpp
DoremiEngine/Physics/Source/RigidBodyClasses/: MeshCooker.cpp
Game/: CMakeLists.txt
Game/Core/: CMakeLists.txt
UnitTest/: CMakeLists.txt
UnitTest/Include/: BitStreamerTest.hpp  NetworkEventTest.hpp  ProximityHelperTesting.hpp
UnitTest/Include/Memory/: FixedSizePoolAllocatorTest.hpp  StackAllocatorTest.hpp  TestStruct64.hpp
UnitTest/Include/Utilities/Memory/: FixedSizePoolAllocatorTest.hpp  StackAllocatorTest.hpp
UnitTest/Source/: BitStreamerTest.cpp  ExtrapolationTest.cpp  Main.cpp  NetworkEventTest.cpp  ProximityHelperTesting.cpp  SequenceMathTest.cpp  StorageShelfTest.cpp  TreeCreatorTest.cpp
UnitTest/Source/Memory/: FixedSizePoolAllocatorTest.cpp  StackAllocatorTest.cpp  TestStruct64Test.cpp
UnitTest/Source/Utilities/Memory/: FixedSizePoolAllocatorTest.cpp  StackAllocatorTest.cpp  TestStruct64Test.cpp
(+720 files in other folders)
